Broaden the scope of the kube_pod_label example to describe setting log labels with pod labels
Signed-off-by: Pete Wall <pete.wall@grafana.com>

--- a/examples/pod-labels/values.yaml
+++ b/examples/pod-labels/values.yaml
@@ -1,5 +1,5 @@
 cluster:
-  name: kube-pod-labels-test
+  name: pod-labels-test
 
 externalServices:
   prometheus:
@@ -17,6 +17,15 @@ metrics:
   kube-state-metrics:
     metricsTuning:
       includeMetrics: [kube_pod_labels]
+
+logs:
+  pod_logs:
+    extraRelabelingRules: |
+      rule {
+        source_labels = ["__meta_kubernetes_pod_label_app_kubernetes_io_instance"]
+        action = "replace"
+        target_label = "instance"
+      }
 
 test:
   extraQueries:
