--- a/charts/k8s-monitoring/values.yaml
+++ b/charts/k8s-monitoring/values.yaml
@@ -2,6 +2,7 @@
 cluster:
   # -- The name of this cluster, which will be set in all labels. Required.
   name: ""
+  metricsLabelName: "agent_k8s_cluster"
 
   # -- The Kubernetes service. Change this if your cluster DNS is configured differently than the default.
   kubernetesAPIService: kubernetes.default.svc.cluster.local:443
