--- a/examples/gke-autopilot/output.yaml
+++ b/examples/gke-autopilot/output.yaml
@@ -69,7 +69,7 @@ metadata:
   name: k8smon-opencost
   namespace: default
   labels:
-    helm.sh/chart: opencost-1.35.0
+    helm.sh/chart: opencost-1.38.1
     app.kubernetes.io/name: opencost
     app.kubernetes.io/instance: k8smon
     app.kubernetes.io/version: "1.110.0"
@@ -208,6 +208,7 @@ data:
         statements = [
           "set(attributes[\"pod\"], attributes[\"k8s.pod.name\"])",
           "set(attributes[\"namespace\"], attributes[\"k8s.namespace.name\"])",
+          "set(attributes[\"service_name\"], attributes[\"k8s.deployment.name\"])",
           "set(attributes[\"loki.resource.labels\"], \"cluster, namespace, job, pod\")",
           "set(attributes[\"k8s.cluster.name\"], \"gke-autopilot-test\") where attributes[\"k8s.cluster.name\"] == nil",
         ]
@@ -48533,7 +48534,7 @@ kind: ClusterRole
 metadata:
   name: k8smon-opencost
   labels:
-    helm.sh/chart: opencost-1.35.0
+    helm.sh/chart: opencost-1.38.1
     app.kubernetes.io/name: opencost
     app.kubernetes.io/instance: k8smon
     app.kubernetes.io/version: "1.110.0"
@@ -48709,7 +48710,7 @@ kind: ClusterRoleBinding
 metadata:
   name: k8smon-opencost
   labels:
-    helm.sh/chart: opencost-1.35.0
+    helm.sh/chart: opencost-1.38.1
     app.kubernetes.io/name: opencost
     app.kubernetes.io/instance: k8smon
     app.kubernetes.io/version: "1.110.0"
@@ -48932,7 +48933,7 @@ metadata:
   name: k8smon-opencost
   namespace: default
   labels:
-    helm.sh/chart: opencost-1.35.0
+    helm.sh/chart: opencost-1.38.1
     app.kubernetes.io/name: opencost
     app.kubernetes.io/instance: k8smon
     app.kubernetes.io/version: "1.110.0"
@@ -48942,7 +48943,7 @@ spec:
   selector:
     app.kubernetes.io/name: opencost
     app.kubernetes.io/instance: k8smon
-  type: ClusterIP
+  type: "ClusterIP"
   ports:
     - name: http
       port: 9003
@@ -49264,7 +49265,7 @@ metadata:
   name: k8smon-opencost
   namespace: default
   labels:
-    helm.sh/chart: opencost-1.35.0
+    helm.sh/chart: opencost-1.38.1
     app.kubernetes.io/name: opencost
     app.kubernetes.io/instance: k8smon
     app.kubernetes.io/version: "1.110.0"
@@ -49631,6 +49632,7 @@ data:
         statements = [
           "set(attributes[\"pod\"], attributes[\"k8s.pod.name\"])",
           "set(attributes[\"namespace\"], attributes[\"k8s.namespace.name\"])",
+          "set(attributes[\"service_name\"], attributes[\"k8s.deployment.name\"])",
           "set(attributes[\"loki.resource.labels\"], \"cluster, namespace, job, pod\")",
           "set(attributes[\"k8s.cluster.name\"], \"gke-autopilot-test\") where attributes[\"k8s.cluster.name\"] == nil",
         ]
